# MoE-CAP

./: .gitignore  BENCHMARK_GUIDE.md  PROFILING_ONLY_GUIDE.md  README.md  pyproject.toml  requirements.txt  run_all_benchmarks.sh  run_all_benchmarks_vllm.sh  verify_amd_moe_arena.py
configs/: fixed_13k_1k_dsv2_lite.yaml  fixed_13k_1k_dsv2_lite_bs128.yaml  fixed_13k_1k_mixtral_8x22b.yaml  fixed_13k_1k_mixtral_8x22b_bs128.yaml  fixed_13k_1k_mixtral_8x7b.yaml  fixed_13k_1k_mixtral_8x7b_bs128.yaml  fixed_13k_1k_qwen1.5.yaml  fixed_13k_1k_qwen1.5_bs128.yaml  fixed_1k_8k_gptoss.yaml  fixed_4k_1k_dsv2_lite.yaml  fixed_4k_1k_dsv2_lite_bs128.yaml  fixed_4k_1k_mixtral_8x22b.yaml  fixed_4k_1k_mixtral_8x22b_bs128.yaml  fixed_4k_1k_mixtral_8x7b.yaml  fixed_4k_1k_mixtral_8x7b_bs128.yaml  fixed_4k_1k_qwen1.5.yaml  fixed_4k_1k_qwen1.5_bs128.yaml  fixed_4k_1k_qwen3_235b.yaml  gsm8k_qwen3_30b_a3b.yaml
docs/amd-mi355x-runtime-issues/: README.md
moe_cap/configs/: __init__.py  cap_config.py
moe_cap/data_loader/: __init__.py  arena_hard_loader.py  base_data_loader.py  gsm8k_data_loader.py  loader_registry.py  longbench_v1_loader.py  longbench_v2_loader.py  mmlu_pro_loader.py  numinamath_loader.py
moe_cap/extracted_expert_dist/: README.md  expert_distribution_recorder.py  expert_distribution_report_usage.md  vllm_integration.py
moe_cap/model_loader/: hf_model_info_loader.py
moe_cap/runner/: openai_api_profile.py  sglang_profile.py
moe_cap/systems/: sglang.py  sglang_rocm.py  vllm.py  vllm_rocm.py
moe_cap/utils/: __init__.py  acc_metrics.py  arena_hard_judge.py  basic_utils.py  cost_utils.py  (+6 more)
tests/: test_accuracy_index_alignment.py  test_arena_generation_validation.py  test_chat_reasoning_output.py  test_failure_zero_quality.py  test_gb10_hardware.py  test_gsm8k_answer_extraction.py  test_profiling_only_recorder.py  test_prometheus_routing_compat.py  test_report_wall_time_metrics.py  test_sglang_forward_raw_compat.py  test_sglang_profile.py  test_sglang_request_compat.py  test_vllm_rocm_spawn.py
(+2 files in other folders)
